--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ mailMailer=smtp
 mailHost=smtp.mail.ru
 mailPort=465
 mailEncryption=ssl
-mailUsername=helpandrey007@mail.ru
+mailUsername=test@mail.ru
 mailPassword=h1GjbqelA09uAFLHeMPe
 mailFromAddress=helpandrey007@mail.ru
 
