--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,62 @@
-#Сначала игнорировать ВСЁ в корне (/*)
-/*
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
 
-#Символ ! в начале строки означает "не игнорировать" этот каталог
-#Символ / в начале пути означает, что правило применяется только в корне проекта
+# Environment
+.env
+.env.*
+!.env.example
 
-# Игнорирование стандартных каталогов Python
-__pycache__/  # Кэш-файлы Python (автоматически генерируемые)
-*.py[cod]     # Другие файлы кэша Python
-*.so          # Скомпилированные расширения Python
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
 
-# Игнорирование каталогов проекта
-!/app/
-!/config/
-!/database/
-!/static/
-!/resources/
-!/tests/
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Документация - НЕ игнорировать
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
 
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Не игнорировать основные файлы проекта
-!/craft.py
-!/run.py
-!/requirements.txt
-!/package.json
-!/webpack.config.js
+# Logs
+*.log
+storage/logs/*.log
+!storage/logs/.gitkeep
 
+# Packages
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
 
-!/alembic.ini
-!/.env.example
-
-# Файлы окружения и конфигурации
-.env          # Файл с переменными окружения (никогда не должен попадать в репозиторий!)
-.env.*        # Все варианты файлов окружения
-
-# Виртуальные окружения
-/node_modules
-/storage
-/venv/        # Виртуальное окружение (обычное расположение)
-venv*/        # Все варианты каталогов виртуального окружения
-.python-version  # Файл указания версии Python (если используется pyenv)
-
-# Node.js зависимости
-/node_modules/  # Каталог зависимостей Node.js (если проект использует фронтенд)
-
-# Прочие файлы
-.DS_Store     # Служебные файлы macOS
-Thumbs.db     # Служебные файлы Windows
+# Project specific
+*.sqlite3
+*.db
