DCCD-11 fixed critical security

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-appBaseName=TitanCore
-appBaseUrl=http://127.0.0.1:8000
+app_base_name=TitanCore
+app_base_url=http://127.0.0.1:8000
 
-databaseUser=root
-databasePassword=
-databaseHost=127.0.0.1
-databasePort=3306
-databaseName=
+database_user=root
+database_password=
+database_host=127.0.0.1
+database_port=3306
+database_name=
 
-mailFromName=TitanCore
-mailMailer=smtp
-mailHost=smtp.gmail.ru
-mailPort=465
-mailEncryption=ssl
-mailUsername=
-mailPassword=
-mailFromAddress=
+mail_from_name=TitanCore
+mail_mailer=smtp
+mail_host=smtp.gmail.ru
+mail_port=465
+mail_encryption=ssl
+mail_username=
+mail_password=
+mail_from_address=
 
 SESSION_SECRET_KEY=
