--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ sqlalchemy==2.0.25
 python-dotenv==1.2.1
 pymysql==1.1.2
 jinja2==3.1.2
+aiohttp-jinja2==1.5.1
 email-validator==2.0.0.post2
 bcrypt==3.2.0
+passlib[bcrypt]==1.7.4
 pydantic-settings==2.2.1
 
 
